tailorbird-task/force-app/main/default/objects/Delivery__c/Delivery__c.object-meta.xml
<CustomObject>
    <label>Delivery</label>
    <nameField>
        <displayFormat>DEL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>