tailorbird-task/force-app/main/default/objects/Delivery__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer, who is the source and destination of the order.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>All Deliveries</relationshipLabel>
    <relationshipName>Customer_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>