tailorbird-task/force-app/main/default/objects/Delivery__c/fields/Delivery_Person__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the person who will be delivering the order.</description>
    <label>Delivery Person</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Delivery</relationshipLabel>
    <relationshipName>Delivery</relationshipName>
    <type>Lookup</type>
</CustomField>