tailorbird-task/force-app/main/default/objects/Delivery__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <description>Each delivery must be a part of a job. Deliveries can be reparented to other jobs.</description>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Delivery</relationshipLabel>
    <relationshipName>Delivery</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>