tailorbird-task/force-app/main/default/objects/Delivery__c/fields/Tip__c.field-meta.xml
<CustomField>
    <fullName>Tip__c</fullName>
    <label>Tip</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>