tailorbird-task/force-app/main/default/objects/Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Tip__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>